--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
     "dev": "vue-cli-service serve",
     "build": "rm -rf dist && vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "start": "npm run dev"
+    "start": "node server.js"
   },
   "dependencies": {
+    "express": "^4.16.4",
     "vue": "^2.5.17"
   },
   "devDependencies": {
