--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@vue/cli-plugin-babel": "^3.0.5",
     "@vue/cli-plugin-eslint": "^3.0.5",
     "@vue/cli-service": "^3.0.5",
+    "axios": "^0.18.0",
     "bootstrap-vue": "^2.0.0-rc.11",
     "node-sass": "^4.9.4",
+    "nodemailer": "^4.6.8",
     "photoswipe": "^4.1.2",
     "sass-loader": "^7.1.0",
     "vue-template-compiler": "^2.5.17"
